--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -26,7 +26,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.28.3"
+    "@azure/msal-browser": "^2.28.3",
+    "@types/chrome": "^0.0.209"
   },
   "resolutions": {
     "ansi-regex": "5.0.1",
