--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/tsconfig.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": [ "chrome" ]
   }
 }
